--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=FinancialSystem
 APP_ENV=local
-APP_KEY=base64:7zhIvw5Ro+t7Vo8OmDEO5gc91wqNLDLA6/VlSZy8Eek=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,7 +9,7 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=fs
+DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
